--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "deploy": "npm run build && sh -c \"$(curl -s https://assets.pezatomico.com/scripts/deploy)\""
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.2.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.7.1",
